# demo-python-uv-minichat-keycloak

./: README.md  main.py  main_with_keycloak.py  pyproject.toml
templates/: secure_index.html
terraform/: clevercloud.tf
